Add styles to basic UI page

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,99 @@
-body {
-  background-color: bisque;
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.hello {
-  color: red;
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5625rem 1rem;
+}
+
+h1,
+h2,
+.refresh-btn,
+.eachScore,
+.inputs {
+  font-family: 'Poppins', sans-serif;
+}
+
+#main {
+  padding: 0 3.125rem;
+}
+
+.grid-section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1.25rem;
+}
+
+.leaderboard-lists,
+.toadd-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.refresh {
+  display: flex;
+  gap: 3.125rem;
+}
+
+.main-lists {
+  border-radius: 4px;
+  border: 2px solid #000;
+}
+
+.white-bg {
+  background-color: #fff;
+}
+
+.grey-bg {
+  background-color: #ddd;
+}
+
+.eachScore {
+  padding: 8px;
+  font-weight: 600;
+  color: #000;
+}
+
+.forms {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.inputs,
+.refresh-btn {
+  padding: 0.375rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+}
+
+.submit-inputs {
+  width: 20%;
+  align-self: flex-end;
+}
+
+.refresh-btn,
+.submit-inputs {
+  box-shadow: 3px 3px #000;
+}
+
+.refresh,
+.main-lists,
+.forms,
+.add-score,
+.text-inputs {
+    margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .grid-section {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 1.25rem;
+  }
 }
